update related state data files

--- a/mod/localization/simp_chinese/hub_names_states_merging_l_simp_chinese.yml
+++ b/mod/localization/simp_chinese/hub_names_states_merging_l_simp_chinese.yml
@@ -1,3 +1,4 @@
 ﻿l_simp_chinese:
   HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_mine: "坎伯兰"
   HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_wood: "弗雷德里克"
+  HUB_NAME_STATE_PUERTO_RICO_mine: "名称"
