--- a/mod/localization/english/hub_names_states_merging_l_english.yml
+++ b/mod/localization/english/hub_names_states_merging_l_english.yml
@@ -1,3 +1,4 @@
 ﻿l_english:
   HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_mine: "Cumberland"
   HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_wood: "Frederick"
+  HUB_NAME_STATE_PUERTO_RICO_mine: "NAME"
